--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
-build/
-node_modules/
-yarn.lock
-.secret
-.apikey
 
+cadence/contracts/Kibble.cdc
+cadence/contracts/NFTStorefront.cdc
+cadence/flow.json
